fix: removed awkward gap on top of navbar for welcome page

--- a/zproject/welcome/welcome.css
+++ b/zproject/welcome/welcome.css
@@ -1,14 +1,15 @@
 @import "../global.css";
 
 body {
-    background: radial-gradient(circle, var(--accent-dark-2) 10%, var(--accent-dark-1) 100%);
+    height: 100vh;
     width: 100vw;
+}
+
+.centerer {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
-    height: 100vh;
-    display: flex;
+    width: 100vw;
 }
 
 .freaky {
@@ -35,11 +36,10 @@ body {
 }
 
 .navbar {
-    position: absolute;
+    position: fixed;
     display: flex;
     width: 100vw;
     height: 8vh;
-    top: 1.25rem;
     padding: 6px;
 }
 
